--- a/views/raiz.html
+++ b/views/raiz.html
@@ -29,7 +29,7 @@
 <container>
 
     <!--<a ng-link="['DetalleArticulo']">Detalles</a>-->
-<lista-productos ng-repeat="item in $ctrl.productos" producto="item"></lista-productos>
+<!--<lista-productos ng-repeat="item in $ctrl.productos" producto="item"></lista-productos>-->
 
     <!--<lista-productos></lista-productos>-->
 
