--- a/views/detalle-articulo.html
+++ b/views/detalle-articulo.html
@@ -1,2 +1,16 @@
-<!--<lista-productos ng-repeat="item in $ctrl.productos" producto="item"></lista-productos>-->
-<h1>Holazzzzz</h1>
+<br><br><br>
+
+<div class="row">
+    <h1 class="text-center">{{$ctrl.producto.name}}</h1>
+    <div class ="col-md-3">
+    <img src="{{ $ctrl.imagen }}"/>
+
+
+    </div>
+    <div class="col-md-8">
+        <div ng-bind-html="$ctrl.descripcion"></div>
+        <h3>Datos Relevantes</h3>
+        <p>Fecha Publicación: {{$ctrl.producto.published_date | date:'dd-MM-yyyy'}} Precio {{ $ctrl.producto.price |currency:"EUR€"}}</p>
+
+</div>
+</div>
