--- a/views/listado-productos.html
+++ b/views/listado-productos.html
@@ -4,6 +4,12 @@
 
     <input type="text" class="form-control" placeholder="Buscar" name="srch-term" id="srch-term" ng-model="$ctrl.productoSeleccionado">
     <button class="btn btn-primary"  ng-click="$ctrl.updateFilter()"><i class="glyphicon glyphicon-search"></i></button>
+    <label>Categorias
+        <select ng-model="$ctrl.category" ng-options="categoria.name for categoria in $ctrl.categories" ng-change="$ctrl.updateCategories()"></select>
+    </label>
+
+
+
 
 </div>
 
