--- a/views/detalle-articulo.html
+++ b/views/detalle-articulo.html
@@ -8,9 +8,19 @@
 
     </div>
     <div class="col-md-8">
+
         <div ng-bind-html="$ctrl.descripcion"></div>
+        <div class="separated"></div>
+        <div class="col-md-8">
         <h3>Datos Relevantes</h3>
         <p>Fecha Publicación: {{$ctrl.producto.published_date | date:'dd-MM-yyyy'}} Precio {{ $ctrl.producto.price |currency:"EUR€"}}</p>
+        </div>
+        <div class="col-md-3">
+            {{$ctrl.producto.seller.id}}
 
+            <!-- Este es el que me da PROBLEMAS -->
+
+            <seller idseller=$ctrl.producto.seller.id></seller>
+        </div>
 </div>
 </div>
