--- a/views/seller.html
+++ b/views/seller.html
@@ -1,5 +1,10 @@
 <div>
-    <!--<img src="{{$ctrl.imagen}}">-->
-    <p>{{$ctrl.nick}}</p>
+    <h3>Vendedor</h3>
+    <img width="140" class="img-circle" src="{{$ctrl.imagen}}">
+    <p><b>Nombre:</b>{{$ctrl.seller.name}}<br>
+    <b>nick:</b>{{$ctrl.nick}}<br>
+    <b>mail:</b>{{$ctrl.seller.mail}}
+
+    </p>
 
 </div>
