Configuramos setting con lo values

--- a/views/seller.html
+++ b/views/seller.html
@@ -3,7 +3,7 @@
     <img width="140" class="img-circle" src="{{$ctrl.imagen}}">
     <p><b>Nombre:</b>{{$ctrl.seller.name}}<br>
     <b>nick:</b>{{$ctrl.nick}}<br>
-    <b>mail:</b>{{$ctrl.seller.mail}}
+    <b>mail:</b>{{$ctrl.seller.email}}
 
     </p>
 
