--- a/views/detalle-articulo.html
+++ b/views/detalle-articulo.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-8">
 
-        <div ng-bind-html="$ctrl.descripcion"></div>
+        <div class="text-justify" ng-bind-html="$ctrl.descripcion"></div>
         <div class="separated"></div>
         <div class="col-md-8">
         <h3>Datos Relevantes</h3>
