--- a/views/detalle-articulo.html
+++ b/views/detalle-articulo.html
@@ -21,5 +21,6 @@
             <seller idseller=$ctrl.producto.seller.id></seller>
         </div>
         <a class="btn btn-danger" ng-link="['ListadoProductos']">Volver al listado</a>
+        <a class="btn btn-primary" ng-click="$ctrl.favorito()">Marcar como Favorito</a>
 </div>
 </div>
